--- a/css/karios-labs.webflow.css
+++ b/css/karios-labs.webflow.css
@@ -9,6 +9,9 @@
   --transperent: #fff0;
   --_border-radius---r-32: 32px;
   --_border-radius---r-16: 16px;
+  --general-dark: #111418;
+  --neutrals-400: #888;
+  --_font-size---paragraph--body-s: 14px;
   --_font-size---heading--h1: 64px;
   --_letter-spacing---ls-3-2: -3.2px;
   --neutral-100: #fafafa;
@@ -31,12 +34,10 @@
   --_font-size---heading--h6: 20px;
   --_letter-spacing---ls-1: -1px;
   --neutrals-100: #f8f8fa;
-  --_font-size---paragraph--body-s: 14px;
   --neutrals-200: #d1d1d1;
   --_letter-spacing---ls-0-9: -.9px;
   --neutrals-300: #b0b0b0;
   --_font-size---paragraph--body-l: 18px;
-  --neutrals-400: #888;
   --_font-size---paragraph--body-xl: 20px;
   --neutrals-500: #6d6d6d;
   --_font-size---paragraph--body-xxl: 32px;
@@ -44,7 +45,25 @@
   --neutrals-700: #4f4f4f;
   --neutrals-800: #454545;
   --neutrals-900: #3d3d3d;
-  --general-dark: #111418;
+}
+
+.w-layout-blockcontainer {
+  max-width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+@media screen and (max-width: 991px) {
+  .w-layout-blockcontainer {
+    max-width: 728px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .w-layout-blockcontainer {
+    max-width: none;
+  }
 }
 
 body {
@@ -179,16 +198,105 @@ body {
   display: none;
 }
 
+.section {
+  background-color: var(--general-dark);
+  color: var(--neutral-50);
+  margin-top: 220px;
+  padding-top: 40px;
+  padding-bottom: 32px;
+}
+
+.container-3 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.footer-wrap {
+  grid-column-gap: 80px;
+  grid-row-gap: 80px;
+  justify-content: space-between;
+  align-items: flex-start;
+  display: flex;
+}
+
+.footer-copyright {
+  color: var(--neutrals-400);
+  border-top: 1px solid #303132;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 100px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  display: flex;
+}
+
+.footer-logo-wrapper {
+  width: 100%;
+  max-width: 283px;
+  display: inline-block;
+}
+
+.footer-left-wrapper {
+  width: 100%;
+  max-width: 283px;
+}
+
+.footer-logo {
+  width: 100%;
+}
+
+.footer-right-wrapper {
+  grid-column-gap: 40px;
+  grid-row-gap: 40px;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  max-width: 496px;
+  display: flex;
+}
+
+.footer-menu-title {
+  font-weight: 500;
+}
+
+.footer-menu-wrapper {
+  grid-column-gap: 12px;
+  grid-row-gap: 12px;
+  flex-flow: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  margin-top: 16px;
+  display: flex;
+}
+
+.footer-link-wrapper {
+  letter-spacing: var(--_letter-spacing---ls-0-48);
+  -webkit-text-stroke-color: var(--neutrals-400);
+  height: 22px;
+  text-decoration: none;
+  display: block;
+  overflow: hidden;
+}
+
+.footer-link-text {
+  color: var(--neutrals-400);
+  text-decoration: none;
+}
+
+.copyright-left-text {
+  font-size: var(--_font-size---paragraph--body-s);
+}
+
 @media screen and (max-width: 991px) {
   body {
     --_font-size---paragraph--body-r: 16px;
+    --_font-size---paragraph--body-s: 14px;
     --_font-size---heading--h1: 52px;
     --_font-size---heading--h2: 44px;
     --_font-size---heading--h3: 32px;
     --_font-size---heading--h4: 28px;
     --_font-size---heading--h5: 22px;
     --_font-size---heading--h6: 18px;
-    --_font-size---paragraph--body-s: 14px;
     --_font-size---paragraph--body-l: 16px;
     --_font-size---paragraph--body-xl: 18px;
     --_font-size---paragraph--body-xxl: 28px;
@@ -274,18 +382,23 @@ body {
   .primary-button-contact {
     display: none;
   }
+
+  .section {
+    padding-top: 30px;
+    padding-bottom: 24px;
+  }
 }
 
 @media screen and (max-width: 767px) {
   body {
     --_font-size---paragraph--body-r: 16px;
+    --_font-size---paragraph--body-s: 14px;
     --_font-size---heading--h1: 44px;
     --_font-size---heading--h2: 40px;
     --_font-size---heading--h3: 28px;
     --_font-size---heading--h4: 24px;
     --_font-size---heading--h5: 20px;
     --_font-size---heading--h6: 16px;
-    --_font-size---paragraph--body-s: 14px;
     --_font-size---paragraph--body-l: 16px;
     --_font-size---paragraph--body-xl: 17px;
     --_font-size---paragraph--body-xxl: 24px;
@@ -321,18 +434,27 @@ body {
     border-radius: var(--_border-radius---r-16);
     height: 3px;
   }
+
+  .section {
+    padding-bottom: 20px;
+  }
+
+  .footer-right-wrapper {
+    grid-column-gap: 24px;
+    grid-row-gap: 24px;
+  }
 }
 
 @media screen and (max-width: 479px) {
   body {
     --_font-size---paragraph--body-r: 16px;
+    --_font-size---paragraph--body-s: 14px;
     --_font-size---heading--h1: 40px;
     --_font-size---heading--h2: 36px;
     --_font-size---heading--h3: 24px;
     --_font-size---heading--h4: 20px;
     --_font-size---heading--h5: 18px;
     --_font-size---heading--h6: 14px;
-    --_font-size---paragraph--body-s: 14px;
     --_font-size---paragraph--body-l: 16px;
     --_font-size---paragraph--body-xl: 16px;
     --_font-size---paragraph--body-xxl: 20px;
@@ -402,6 +524,24 @@ body {
     align-items: flex-start;
     margin-top: 20px;
     display: flex;
+  }
+
+  .footer-wrap {
+    flex-flow: column;
+  }
+
+  .footer-copyright {
+    justify-content: center;
+  }
+
+  .footer-right-wrapper {
+    grid-column-gap: 24px;
+    grid-row-gap: 24px;
+    flex-flow: row;
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-columns: 1fr;
+    display: grid;
   }
 }
 
