--- a/css/karios-labs.webflow.css
+++ b/css/karios-labs.webflow.css
@@ -28,6 +28,7 @@
   --_font-size---heading--h4: 32px;
   --_letter-spacing---ls-1-6: -1.6px;
   --_letter-spacing---ls-2-2: -2.2px;
+  --neutrals-500: #6d6d6d;
   --_letter-spacing---ls-3-2: -3.2px;
   --_font-size---heading--h2: 52px;
   --_border-radius---r-20: 20px;
@@ -39,7 +40,6 @@
   --_font-size---heading--h6: 20px;
   --neutrals-100: #f8f8fa;
   --neutrals-200: #d1d1d1;
-  --neutrals-500: #6d6d6d;
   --_font-size---paragraph--body-xxl: 32px;
   --neutrals-600: #5d5d5d;
   --neutrals-700: #4f4f4f;
@@ -215,7 +215,9 @@ body {
 }
 
 .section.about {
-  background-color: var(--transperent);
+  background-color: var(--neutral-50);
+  color: var(--neutrals-950);
+  border-radius: 12px;
   margin-top: 0;
   padding-bottom: 40px;
 }
@@ -504,6 +506,134 @@ body {
   overflow: hidden;
 }
 
+.about-wrap {
+  grid-column-gap: 40px;
+  grid-row-gap: 40px;
+  justify-content: space-between;
+  display: flex;
+}
+
+.about-image-wrapper {
+  z-index: 1;
+  border-radius: var(--_border-radius---r-24);
+  width: 100%;
+  max-width: 432px;
+  position: relative;
+}
+
+.about-image {
+  box-sizing: border-box;
+  border-radius: var(--_border-radius---r-24);
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.about-content-wrapper {
+  width: 100%;
+  max-width: 696px;
+}
+
+.about-details-wrap {
+  width: 100%;
+  max-width: 464px;
+}
+
+.about-details {
+  color: var(--neutrals-400);
+  font-size: var(--_font-size---paragraph--body-xl);
+  letter-spacing: var(--_letter-spacing---ls-1-2);
+  text-indent: 119px;
+  margin-bottom: 0;
+}
+
+.about-content {
+  grid-column-gap: 4px;
+  grid-row-gap: 4px;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-columns: 1fr;
+  margin-top: 75px;
+  display: grid;
+  overflow: hidden;
+}
+
+.about-single-wrap {
+  grid-column-gap: 4px;
+  grid-row-gap: 4px;
+  flex-flow: column;
+  width: 100%;
+  max-width: 100%;
+  display: flex;
+  overflow: hidden;
+}
+
+.about-top-content {
+  background-color: var(--neutral-50);
+  border-radius: 12px;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 24px;
+  display: flex;
+}
+
+.counter-number-wrap {
+  font-size: var(--_font-size---heading--h3);
+  line-height: var(--_line-height---lh-120);
+  letter-spacing: var(--_letter-spacing---ls-2-2);
+  align-items: flex-start;
+  height: 53px;
+  font-weight: 500;
+  display: flex;
+  overflow: hidden;
+}
+
+.about-number {
+  color: var(--neutrals-500);
+  font-size: var(--_font-size---paragraph--body-s);
+  letter-spacing: -.28px;
+}
+
+.about-item-wrap {
+  grid-column-gap: 160px;
+  grid-row-gap: 160px;
+  background-color: var(--neutral-50);
+  border-radius: 12px;
+  flex-flow: column;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  padding: 24px;
+  display: flex;
+}
+
+.about-item-title-wrapper {
+  text-align: right;
+  width: 100%;
+}
+
+.about-item-title {
+  font-size: var(--_font-size---paragraph--body-xl);
+  line-height: var(--_line-height---lh-130);
+  text-align: right;
+  width: 100%;
+  max-width: 151px;
+  margin-left: auto;
+  font-weight: 500;
+}
+
+.about-item-details-wrapper {
+  max-width: 298px;
+}
+
+.about-item-details {
+  color: var(--neutrals-500);
+  font-size: var(--_font-size---paragraph--body-r);
+  letter-spacing: var(--_letter-spacing---ls-0-48);
+  margin-bottom: 0;
+}
+
 @media screen and (max-width: 991px) {
   body {
     --_font-size---paragraph--body-r: 16px;
@@ -605,6 +735,10 @@ body {
     padding-bottom: 24px;
   }
 
+  .footer-logo {
+    width: 70%;
+  }
+
   .hero-wrapper {
     padding-left: 20px;
     padding-right: 20px;
@@ -637,6 +771,21 @@ body {
     letter-spacing: var(--_letter-spacing---ls-1-6);
     padding-top: 0;
     padding-bottom: 0;
+  }
+
+  .about-wrap {
+    flex-flow: column;
+    align-items: center;
+  }
+
+  .about-details-wrap {
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .counter-number-wrap {
+    height: 38px;
   }
 }
 
@@ -724,6 +873,10 @@ body {
     padding-bottom: 0;
     padding-left: 0;
     padding-right: 0;
+  }
+
+  .counter-number-wrap {
+    height: 34px;
   }
 }
 
@@ -867,9 +1020,21 @@ body {
     color: var(--neutral-100);
   }
 
+  .about-wrapper {
+    padding: 40px 10px;
+  }
+
   .about-black-title {
     line-height: var(--_line-height---lh-120);
     letter-spacing: var(--_letter-spacing---ls-2-2);
+  }
+
+  .about-content {
+    grid-template-columns: 1fr;
+  }
+
+  .counter-number-wrap {
+    height: 29px;
   }
 }
 
